Added #11 Fixed #9